use Arrays.asList to avoid compilation issues